manifests/media/wizarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wizarr-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: wizarr.local.tanksrop.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wizarr
            port:
              number: 5690
